Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27640

QToolButton::menu-arrow{image:none;} does not work in Custom TitleBar

XMLWordPrintable

    • 2b2e7b2ac50e5b4f6e1888e594f6e32338dd2a80 8856f4bf82c9d95b2023ce51b1fcb19e114ba888 (qt/tqtc-qtbase/6.1.2)

      QToolButton::menu-arrow

      {image:none;}

      does not work in Custom TitleBar.
      But, QToolButton::menu-arrow

      {image:none;}

      does work in QToolBar.

      Why doesn't work?

      I want to use QToolButton in My Custom TitleBar like MacStyle.
      So, i want to hide menu-arrow;

      Thank you.

        1. toolbutton_test.zip
          15 kB
          Jukka Palokangas
        For Gerrit Dashboard: QTBUG-27640
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            james James Han
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes